observatory-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: observatory-web
  namespace: dev-pr2127
spec:
  replicas: 1
  selector:
    matchLabels:
      app: observatory-web
  template:
    metadata:
      labels:
        app: observatory-web
    spec:
      containers:
        - name: observatory-web
          image: europe-docker.pkg.dev/flowxai-sandbox/ai/observatory-web:2.0.11
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: observatory-web
  namespace: dev-pr2127
spec:
  selector:
    app: observatory-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
